--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 	"license":"LGPL-3.0+",
 	"authors":[
 		{
-			"name":"Andreas Isaak",
+            "name":"Andreas Isaak",
+            "email":"isaak@men-at-work.de",
+            "homepage":"http://www.men-at-work.de",
 			"role":"Developer"
 		},
 		{
