Change composer installer version

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 	},
 	"require": {
 		"contao/core": ">=2.10,<4",
-		"contao-community-alliance/composer-installer": "dev-master"
+		"contao-community-alliance/composer-installer": "*"
 	},
 	"replace": {
 		"contao-legacy/multicolumnwizard": "*"
