Change homepage url

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description":"MultiColumWizard for Contao OpenSource CMS",
 	"keywords":["contao", "widget", "wizard"],
 	"type": "contao-module",
-	"homepage":"https://github.com/menatwork/MultiColumnWizard",
+	"homepage":"http://www.men-at-work.de",
 	"license":"LGPL-3.0+",
 	"authors":[
 		{
