Fix #239 - make dc-general optional again
This removes the hard dependency on dc-general by conditionally
registering the event listener.

--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
 	},
 	"require": {
 		"contao/core-bundle":"~3.2 || ~4.1",
-		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0",
-		"contao-community-alliance/dc-general": "^2.0@beta"
+		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
 	},
 	"autoload":{
 		"classmap":["system/"],
