--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
 	"replace": {
 		"contao-legacy/multicolumnwizard": "*"
 	},
+	"abandoned": "menatwork/contao-multicolumnwizard-bundle",
 	"extra": {
 		"contao": {
 			"sources": {
